litellm-router/httproute.yaml
# HTTPRoute to expose litellm on /v1/
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: v1-inference
  namespace: kserve-litellm-router

spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: kserve-ingress-gateway
    namespace: kserve

  hostnames:
  - inference.llm.bearingpoint.com

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1/
    backendRefs:
    - kind: Service
      name: litellm
      port: 4000
      weight: 1
